[package]
name = "fluxus-source-demo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Fluxus Team"]
description = "A demo source implementation for the Fluxus stream processing framework, providing a template for creating custom sources."
homepage = "https://github.com/fluxus-labs/fluxus-source-demo"
repository = "https://github.com/fluxus-labs/fluxus-source-demo"
readme = "README.md"
categories = ["development-tools", "asynchronous"]
keywords = [
    "stream-processing",
    "real-time",
    "data-processing",
    "demo",
    "template"
]

[dependencies]
fluxus = { version="0.1", features = ["full"] }
tokio = { version = "1", features = ["full", "time"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.19"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
tempfile = "3"
