[package]
name = "fluxus-source-sui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Fluxus Team"]
description = "A Fluxus source component for processing and analyzing Sui events streams, providing efficient access to historical Sui event data."
homepage = "https://github.com/fluxus-labs/fluxus-source-sui"
repository = "https://github.com/fluxus-labs/fluxus-source-sui"
readme = "README.md"
categories = ["development-tools", "asynchronous"]
keywords = [
    "stream-processing",
    "real-time",
    "data-processing",
    "sui",
    "template"
]

[dependencies]
sui-rpc-api = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.48.1"}
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.48.1"}
fluxus = { version="0.1", features = ["full"] }
tokio = { version = "1", features = ["full", "time"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.19"
tonic = "0.13.1"
url = "2.5.4"
http = "1.3.1"
futures = "0.3.31"
# futures-util = "0.3.31"
tap = "1.0.1"
# tokio-stream = { version = "0.1.17", features = ["sync"] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
tempfile = "3"
